Add readme to nuget

--- a/DiscordLogger/DiscordLogger.csproj
+++ b/DiscordLogger/DiscordLogger.csproj
@@ -5,6 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -16,6 +18,10 @@
         <PackageTags>utilities;library;logging;discord;log</PackageTags>
         <RepositoryUrl>https://github.com/TheKiiiing/DiscordLogger</RepositoryUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Discord.Net.Webhook" Version="3.18.0" />
