--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,9 +3,11 @@ name: Build and Publish NuGet Package
 on:
   push:
     tags: ["*"]
+  workflow_dispatch:
+  
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
